ref https img instead http

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1272,7 +1272,7 @@
 
                 <div *ngFor="let pricePoint of colyseus.lobby.lobbyState.silverPrices.micro" class="mt-3 row">
                   <div class="col-md-2 text-right">
-                    <img src="http://rair.land/img/coin.png" width="64" height="64" />
+                    <img src="https://rair.land/img/coin.png" width="64" height="64" />
                   </div>
                   <div class="col-md-10 d-flex justify-content-center align-items-center">
                     <button class="btn btn-primary btn-block" (click)="startPayment(pricePoint)">
