--- a/src/client/app/market-board/market-board.component.html
+++ b/src/client/app/market-board/market-board.component.html
@@ -87,7 +87,10 @@
             </div>
 
             <div class="thin-line">
-              <small>{{ statStringFor(itemListing.itemInfo) || 'no stats' }} / {{ traitStringFor(itemListing.itemInfo) || 'no trait' }}</small>
+              <small>
+                {{ statStringFor(itemListing.itemInfo) || 'no stats' }} /
+                {{ traitStringFor(itemListing.itemInfo) || 'no trait' }} /
+                {{ effectStringFor(itemListing.itemInfo) || 'no effect' }}</small>
             </div>
 
             <div class="thin-line">
