fix book page indicator

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -534,7 +534,7 @@
   </ng-template>
 
   <ng-template #bookBody>
-    <app-book></app-book>
+    <app-book [book]="colyseus.game.character.rightHand"></app-book>
   </ng-template>
 
 </div>
