can gain ap, #846

--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -438,9 +438,10 @@
   <ng-template #traitsHead>
     Traits
     (
-    {{ (colyseus.game.skillTree$ | async).traitPoints || 0 }} Trait Points,
-    {{ (colyseus.game.skillTree$ | async).partyPoints || 0 }} Party Points,
-    {{ (colyseus.game.skillTree$ | async).resetPoints || 0 }} Reset Points
+    {{ (colyseus.game.skillTree$ | async).traitPoints || 0 }} TP
+    - {{ (colyseus.game.skillTree$ | async).partyPoints || 0 }} PP
+    - {{ (colyseus.game.skillTree$ | async).resetPoints || 0 }} RP
+    <span *ngIf="(colyseus.game.skillTree$ | async).totalAncientPoints">- {{ (colyseus.game.skillTree$ | async).ancientPoints || 0 }} AP</span>
     )
   </ng-template>
 
