--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1402,6 +1402,7 @@
           <div class="col-6">
             <h5>Base Multipliers</h5>
             <div>XP Multiplier: {{ bonusData.bonus.xpMult * 100 }}%</div>
+            <div>Ancient XP Multiplier: {{ bonusData.bonus.axpMult * 100 }}%</div>
             <div>Gold Multiplier: {{ bonusData.bonus.goldMult * 100 }}%</div>
             <div>Skill Multiplier: {{ bonusData.bonus.skillMult * 100 }}%</div>
             <div>Item Find Multiplier: {{ bonusData.bonus.itemFindMult * 100 }}%</div>
@@ -1409,11 +1410,13 @@
           <div class="col-6">
             <h5>Bonus Festivals</h5>
             <div *ngIf="bonusData.bonusHours.xpMult">+100% XP ({{ bonusData.bonusHours.xpMult }} hours)</div>
+            <div *ngIf="bonusData.bonusHours.axpMult">+100% Ancient XP ({{ bonusData.bonusHours.axpMult }} hours)</div>
             <div *ngIf="bonusData.bonusHours.goldMult">+100% Gold ({{ bonusData.bonusHours.goldMult }} hours)</div>
             <div *ngIf="bonusData.bonusHours.skillMult">+100% Skill ({{ bonusData.bonusHours.skillMult }} hours)</div>
             <div *ngIf="bonusData.bonusHours.itemFindMult">+100% Item Find ({{ bonusData.bonusHours.itemFindMult }} hours)</div>
 
             <div *ngIf="!bonusData.bonusHours.xpMult
+                     && !bonusData.bonusHours.axpMult
                      && !bonusData.bonusHours.goldMult
                      && !bonusData.bonusHours.skillMult
                      && !bonusData.bonusHours.itemFindMult">None. You should start one!</div>
