--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -837,15 +837,6 @@
 
             <div class="row">
               <div class="col-9 ml-auto form-check">
-                <label class="form-check-label" for="nostalgicBackgroundMusic">
-                  <input type="checkbox" class="form-check-input" [(ngModel)]="nostalgicBackgroundMusic" id="nostalgicBackgroundMusic"/>
-                  Nostalgic Background Music
-                </label>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-9 ml-auto form-check">
                 <label class="form-check-label" for="playSoundEffects">
                   <input type="checkbox" class="form-check-input" [(ngModel)]="playSoundEffects" id="playSoundEffects"/>
                   Play Sound Effects
@@ -853,6 +844,15 @@
               </div>
             </div>
           </tab>
+
+          <div class="row">
+            <div class="col-9 ml-auto form-check">
+              <label class="form-check-label" for="nostalgicBackgroundMusic">
+                <input type="checkbox" class="form-check-input" [(ngModel)]="nostalgicBackgroundMusic" id="nostalgicBackgroundMusic"/>
+                Nostalgic Noises (Background Music & Sound Effects)
+              </label>
+            </div>
+          </div>
 
         </tabset>
 
