--- a/src/client/app/tradeskill-spellforging/tradeskill-spellforging.component.html
+++ b/src/client/app/tradeskill-spellforging/tradeskill-spellforging.component.html
@@ -72,17 +72,31 @@
         </div>
       </div>
 
+      <div class="row mt-3 item-row upgrade-row" *ngIf="item">
+        <div class="item-slot item-background" *ngFor="let slot of slots">
+          <span class="item-slot-bg-text" *ngIf="!item.upgrades || !item.upgrades[slot]">Slot {{ slot + 1 }}</span>
+          <app-item size="normal"
+                    [showDesc]="false"
+                    [tooltip]="formatTooltip(item.upgrades[slot])"
+                    container="body"
+                    *ngIf="item.upgrades && item.upgrades[slot]"
+                    [item]="{ sprite: item.upgrades[slot].sprite }"
+          ></app-item>
+        </div>
+      </div>
+
       <div class="row mt-3">
         <div class="col text-center text-warning" *ngIf="hasWarning">
-          Warning: {{ formatTrait(player.tradeSkillContainers.spellforging.modifyItem) }} will be overwritten by {{ formatTrait(player.tradeSkillContainers.spellforging.reagent) }}!
+          Warning: {{ formatTrait(item) }} will be overwritten by {{ formatTrait(player.tradeSkillContainers.spellforging.reagent) }}!
         </div>
       </div>
 
       <div class="row mt-3">
         <div class="col text-center text-warning" *ngIf="hasEffectWarning">
-          Warning: {{ player.tradeSkillContainers.spellforging.modifyItem.effect.name }} Lv {{ player.tradeSkillContainers.spellforging.modifyItem.effect.potency }} will be overwritten by {{ player.tradeSkillContainers.spellforging.reagent.effect.name }} Lv {{ player.tradeSkillContainers.spellforging.reagent.effect.potency }}!
+          Warning: {{ item.effect.name }} Lv {{ item.effect.potency }} will be overwritten by {{ player.tradeSkillContainers.spellforging.reagent.effect.name }} Lv {{ player.tradeSkillContainers.spellforging.reagent.effect.potency }}!
         </div>
       </div>
+
     </div>
 
     <div class="col-4">
