--- a/src/client/app/tradeskill-metalworking/tradeskill-metalworking.component.html
+++ b/src/client/app/tradeskill-metalworking/tradeskill-metalworking.component.html
@@ -125,7 +125,7 @@
           <span class="item-slot-bg-text" *ngIf="!item.upgrades || !item.upgrades[slot]">Slot {{ slot + 1 }}</span>
           <app-item size="normal"
                     [showDesc]="false"
-                    [showValue]="true"
+                    [showValue]="item.upgrades[slot].permanent"
                     overrideValue="Permanent"
                     [tooltip]="formatTooltip(item.upgrades[slot])"
                     container="body"
