--- a/src/client/app/party/party.component.html
+++ b/src/client/app/party/party.component.html
@@ -1,3 +1,25 @@
+
+<div class="my-3 px-3" *ngIf="!party">
+  <div class="input-group">
+    <input type="text" class="form-control" placeholder="Party Name" [(ngModel)]="partyName">
+    <div class="input-group-append">
+      <button class="btn btn-primary" (click)="create()" [disabled]="!partyName" container="body" tooltip="Create a party with the given name">Create</button>
+      <button class="btn btn-secondary" (click)="join()" [disabled]="!partyName" container="body" tooltip="Join a party with the given name, if you can see the leader">Join</button>
+    </div>
+  </div>
+</div>
+
+<div class="my-3 px-3" *ngIf="party">
+  <div class="input-group">
+    <input type="text" class="form-control" placeholder="Pass Party/Kick Member" [(ngModel)]="partyPass">
+    <div class="input-group-append">
+      <button class="btn btn-secondary" (click)="passLeader()" [disabled]="!partyPass" container="body" tooltip="Make the chosen member the new party leader">Pass</button>
+      <button class="btn btn-warning" (click)="kick()" [disabled]="!partyPass" container="body" tooltip="Kick the chosen member by name">Kick</button>
+      <button class="btn btn-danger" (click)="leave()" container="body" tooltip="Leave the party">Leave</button>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped table-sm mb-3">
   <thead>
   <tr>
