--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -870,6 +870,30 @@
                 </label>
               </div>
             </div>
+
+            <div class="row">
+              <div class="col-3 ml-auto form-check">
+                Music Volume
+              </div>
+
+              <div class="col-6">
+                <span class="btn btn-info btn-text btn-sm" (click)="modMusicVol(-0.05)">&lt;</span>
+                <span class="mx-3">{{ bgmVolume * 100 | number: 0 }}%</span>
+                <span class="btn btn-info btn-text btn-sm" (click)="modMusicVol(0.05)">&gt;</span>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-3 ml-auto form-check">
+                SFX Volume
+              </div>
+
+              <div class="col-6">
+                <span class="btn btn-info btn-text btn-sm" (click)="modSfxVol(-0.05)">&lt;</span>
+                <span class="mx-3">{{ sfxVolume * 100 | number: 0 }}%</span>
+                <span class="btn btn-info btn-text btn-sm" (click)="modSfxVol(0.05)">&gt;</span>
+              </div>
+            </div>
           </tab>
 
           <tab heading="Custom CSS">
