--- a/src/client/app/lockers/lockers.component.html
+++ b/src/client/app/lockers/lockers.component.html
@@ -24,6 +24,11 @@
     </div>
 
     <div class="col-8 p-1 d-flex flex-wrap flex-row locker material-locker" *ngIf="currentLocker.regionId === 'Material'">
+
+      <div class="d-flex justify-content-center my-3 w-100">
+        <button class="btn btn-primary text-center" (click)="depositAll()">Deposit All Materials</button>
+      </div>
+
       <div *ngFor="let category of materialLayout" class="d-flex flex-column flex-wrap mb-2">
         <h3 class="text-center">{{ category.category }}</h3>
 
